--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 	<div class="container">
 		<div id="box">
-			<div id="counter">0</div>
-			<button class="btn btn--reset">R</button>
-			<div id="sum">0</div>
+			<div id="counter" aria-label="Counter to 33">0</div>
+			<button class="btn btn--reset" aria-label="Reset">R</button>
+			<div id="sum" aria-label="All countings">0</div>
 		</div>
-		<button class="btn btn--count">Count</button>
+		<button class="btn btn--count" aria-label="Count">Count</button>
 	</div>
 
 	<script>
