--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Primary Meta Tags -->
+	<title>Tasbeh Counter - count your daily tasbeh</title>
+	<meta name="title" content="Tasbeh Counter - count your daily tasbeh">
+	<meta name="description" content="Say Subhanallah Alhamdulillah Allahu akbar">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://tasbeh-counter.netlify.app/">
+	<meta property="og:title" content="Tasbeh Counter - count your daily tasbeh">
+	<meta property="og:description" content="Say Subhanallah Alhamdulillah Allahu akbar">
+	<meta property="og:image" content="./tasbeh-screen.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://tasbeh-counter.netlify.app/">
+	<meta property="twitter:title" content="Tasbeh Counter - count your daily tasbeh">
+	<meta property="twitter:description" content="Say Subhanallah Alhamdulillah Allahu akbar">
+	<meta property="twitter:image" content="./tasbeh-screen.png">
+
 	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -20,8 +39,8 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
+
 	<link rel="stylesheet" href="./css/style.css">
-	<title>Tasbeh Counter</title>
 </head>
 <body>
 	<div class="container">
